# team5-scoreboard

./: README.md
scoreboard-0.1.2/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.ac
scoreboard-0.1.2/src/: Log.cpp  Log.h  Makefile.am  Makefile.in  RCa06448  RCa09836  boardframe.cpp  boardframe.hpp  common.hpp  confdlg.cpp  confdlg.hpp  config-win32.h  config.cpp  config.hpp  ctrlpanel.cpp  ctrlpanel.hpp  gamepanel.cpp  gamepanel.hpp  lcdwindow.cpp  lcdwindow.hpp  main.cpp  main.hpp  resource.h  scoreboard.rc  scoreboard.xpm  statictitle.cpp  statictitle.hpp  teampanel.cpp  teampanel.hpp
scoreboard-0.1.2/vstudio9.0/: scoreboard.sln  scoreboard.vcproj
